...

    <Button
        android:id="@+id/startTripBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startTrip"
        android:text="Start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
...
